--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
+<head>
 <!--
 <link rel="stylesheet" type="text/css" href="../css/issStyle1.css">
 <script type="text/javascript" src="../css/issStyle.js"></script>
@@ -197,15 +198,32 @@
         width: 85%;
         margin: auto;
     }
+	ol.custom {
+		counter-reset: number;
+	}
+	ol.custom > li {
+		list-style: none;
+		counter-increment: number;
+	}
+	ol.custom.functional > li::before {
+		content: "F" counter(number) ".";
+		position: relative;
+		left:-5px
+	}
+	ol.custom.nonfunctional > li::before {
+		content: "NF" counter(number) ".";
+		position: relative;
+		left:-5px
+	}
 </style>
 
-<head>
-
-	<title>TemplateToFill</title></head>
+	<title>ParkManagerService</title>
+	<link rel="icon" href="img/favicon.png">
+</head>
 
 <body>
 <div id="top">
-	<h1>LABORATORIO DI INGEGNERIA DEI SISTEMI SOFTWARE <font size="5"></font></h1>
+	<h1>ESAME DI INGEGNERIA DEI SISTEMI SOFTWARE <font size="5"></font></h1>
 </div>
 
 <div class="body">
@@ -224,34 +242,34 @@
 		<h4>Nouns</h4>
 		<ul>
 			<li><ks>ParkManagerService</ks>: The software system which will implement the required automation functions;</li>
-			<li><ks>DDR robot</ks>: Differential/Direct? Drive Robot. Has the form of a square of side length RD;</li>
-			<li><ks>transport trolley</ks>: A DDR robot which is used to move cars
-				from the INDOOR(?INDOOR-area?) to the selected parking-slot;
-			</li>
+			<li><ks>DDR robot</ks>: Differential Drive Robot. Has the form of a square of side length RD;</li>
+			<li><ks>transport trolley</ks>: A DDR robot which is used to move cars from the INDOOR to the selected
+				parking-slot;</li> <!-- TODO: how to control it? -->
 			<li><ks>home</ks>: Starting position for the robot, located in the top-left corner of the environment. When the
 				robot completes a request, and there are no further instruction, it will return in this position;</li>
 			<li><ks>parking-area</ks>: Empty environment outside which the robot cannot go. It includes INDOOR, INDOOR-area,
 				OUTDOOR, OUTDOOR-area, parking-slots, thermometer and a fan;</li>
 			<li><ks>INDOOR</ks>: Cars use this gate to enter the parking-area;</li>
-			<li><ks>INDOOR-area</ks>: Cars are left here by the drivers and the transport trolley picks them up here. It is
-				located inside the parking area;</li>
-			<li><ks>weightsensor</ks>: Sensor to measure the weight of the car, located in the INDOOR-area;</li>
+			<li><ks>INDOOR-area</ks>: The transport trolley positions itself in this location to pick the car parked in
+				front of the INDOOR. It is located inside the parking area;</li>
+			<li><ks>weightsensor</ks>: Sensor to measure the weight of the car, located in front of the INDOOR;</li>
 			<li><ks>OUTDOOR</ks>: Cars uses this gate to exit from the parking-area;</li>
-			<li><ks>OUTDOOR-area</ks>: Cars are left here by transport trolley and drivers picks them up here.
+			<li><ks>OUTDOOR-area</ks>: The transport trolley positions itself in this location to leave the car
+				just outside the OUTDOOR. Drivers pick them up there.
 				It is located inside the parking area;</li>
-			<li><ks>outsonar</ks>: Controls the presence of cars in the outdoor area. [Guaranteed not to fire false positive or negatives];</li>
+			<li><ks>outsonar</ks>: Sensor that detects cars outside the OUTDOOR;</li>
 			<li><ks>parking-slots</ks>: Dedicated slots inside the parking area where cars are left by the transport
 				trolley. There are 6 parking-slots;</li>
 			<li><ks>thermometer</ks>: Sensor used to measure the temperature inside the parking-area;</li>
 			<li><ks>fan</ks>: A fan used to reduce the temperature inside the parking-area. It can be manually activated
-				by the parking manager, or it can activate automatically;</li>
+				by the parking manager, or it can activate automatically. It can be either on or off;</li>
 			<li><ks>map</ks>: schematic representation of the parking-area, made by a grid of squares of side length RD;</li>
 			<li><ks>fixed obstacles</ks>: Immovable objects that the robot cannot traverse;</li>
 			<li><ks>parking-manager</ks>: Person in charge of the parking-area, who supervises the state and handles
 				critical situations;</li>
 			<li><ks>client</ks>: Person using services of the parking-area. In particular, he will leave and pickup the car;</li>
-			<li><ks>ParkServiceGUI</ks>: GUI for parking clients to leave and pick up cars. Situated near the indoor and
-				outdoor area;</li>
+			<li><ks>ParkServiceGUI</ks>: GUI for parking clients to leave and pick up cars. It can be accessed by the client
+				by using their own personal device;</li>
 			<li><ks>ParkServiceStatusGUI</ks>: GUI for the parking-manager to manage some aspects of the parking area;</li>
 			<li><ks>SLOTNUM</ks>: id of the parking slot given to the client, representing the location where the car will
 				be placed by transport trolley. If equal to 0, no parking slots are available</li>
@@ -286,7 +304,67 @@
 			<li><ks>start the robot</ks>: after the parking-manager stops the robot, it remains stopped until restarted
 				by the parking-manager;</li>
 		</ul>
-
+		<h3>System architecture</h3> <!-- Physical separation between machines, Separation between machines? -->
+		The requirements given by the customer point out the structure of the system intended as the distribution of the
+		program between different devices:
+		<ul>
+			<li>The client devices to interact with the ParkServiceGUI;</li>
+			<li>The parking manager device to interact with the ParkServiceStatusGUI;</li>
+			<li>The ParkManagerService core;</li>
+			<li>The transport trolley;</li>
+			<li>The three sensors and the fan.</li>
+		</ul>
+		<h3>Additional user stories</h3>
+			Multiple users using the application:
+			<ol>
+				<li></li>
+			</ol>
+		<h3>Additional requirements and details</h3>
+		<ul>
+			<li>The fan is automatically activated/deactivated by ParkManagerService. The parking manager cannot overtake control of it;</li>
+			<li>The transport trolley cannot be stopped if TA <= TMAX;</li>
+			<li>It is impossible that a customer reaches the INDOOR without having reserved a parking slot from the GUI;</li>
+			<li>When client try to do acceptIN, if the transport trolley is stopped, the client should see an error message;</li>
+			<li>When parking manager starts the transport trolley, it should continue the move it was doing before stop;</li>
+			<li>Temperature is in Celsius and mass in kilograms;</li>
+			<li>TMAX and DTFREE will be placed in a configuration file accessible by the application;</li>
+			<li>Only the transport trolley is provided by the customers, all the other devices must be chosen and provided by the
+				engineering company;</li>
+		</ul>
+		<h3>List of requirements</h3>
+		<h4>Functional requirements</h4>
+		<ol class="custom functional">
+			<li>The client can book a parking slot through ParkServiceGUI.</li>
+			<li>The system sends the client an id of the parking slot if there are slots available, otherwise it sends 0.</li>
+			<li>The client notifies the ParkManagerService when he leaves the car in front of the INDOOR.</li>
+			<li>The system can transport the cars from the INDOOR to the parking slots, and from the parking slots to the
+				OUTDOOR by sending command to a transport trolley.</li>
+			<li>The system should provide a unique identifier to the client (TOKENID), in order to retrieve the car later.</li>
+			<li>The system must understand if client's car is not in front of the INDOOR during F3</li>
+			<li>The system command the transport trolley to take the car and transport it to the booked parking slot</li>
+			<li></li>
+			<li>Allow one car to enter the parking area</li>
+			<li>The system </li>
+			<li>The parking manager can see the current state of the parking area through the ParkServiceStatusGUI</li>
+			<li>The parking manager can stop the transport trolley when TA > TMAX</li>
+			<li>The parking manager can start the transport trolley when it is stopped</li>
+			<li>The ParkManagerService should start the fan when TA > TMAX and stop it when TA <= TMAX</li>
+			<li>The ParkManagerService should notify the parking manager when the OUTDOOR area is not cleaned within the DTFREE
+			interval of time</li>
+		</ol>
+		<h4>Non-functional requirements</h4>
+		<ol class="custom nonfunctional">
+			<li id="NF1"></li>
+		</ol>
+		<script type="application/javascript">
+			let functionalList = document.querySelectorAll('ol.functional.custom > li');
+			for (let i = 0; i < functionalList.length; i++)
+				functionalList[i].id = 'F' + (i+1);
+			let nonfunctionalList = document.querySelectorAll('ol.nonfunctional.custom > li');
+			for (let i = 0; i < nonfunctionalList.length; i++)
+				nonfunctionalList[i].id = 'NF' + (i+1);
+		</script>
+		For the sake of completeness, a machine-readable <a href="model-requirements<.qak">model</a> is also available.
 	</div>
 
 	<h2>Problem analysis</h2>
@@ -295,8 +373,14 @@
 		A possible abstraction gap is the communication with all the different devices in the parking area:
 		<ul>
 			<li><ks>weight sensor</ks>: </li>
-			<li><ks>outsonar</ks>: </li>
-			<li><ks>fan</ks>: </li>
+			<li><ks>outsonar</ks>: Ultrasonic sensor that measures the distance of an obstacle in front of it.
+				The customer provides an
+				<a href="https://github.com/anatali/issLab2021/blob/main/it.unibo.rasp2021/resources/rasp/sonar/SonarAlone.c">example implementation</a>
+				of a program reading the distance from the sensor.
+				The sensor is connected to the software via a cable and supports platforms like Arduino and Raspberry Pi.</li>
+			<li><ks>fan</ks>: can be controlled simply giving or removing power from it. A relay could be used to switch
+			it on and off from a computer</li>
+			<li><ks>thermometer</ks>: </li>
 			<li><ks>transport trolley</ks>: The customer provides a set of utilities to interact with the robot, both in
 				<a href="https://github.com/anatali/issLab2021/tree/main/it.unibo.qak21.basicrobot">qak</a> and
 				<a href="https://github.com/anatali/issLab2021/tree/main/it.unibo.kotlinSupports">kotlin</a>.<br>
@@ -304,12 +388,158 @@
 				<a href="https://htmlpreview.github.io/?https://github.com/anatali/issLab2021/blob/master/it.unibo.virtualRobot2020/userDocs/VirtualRobot2021.html">API documentation</a> to communicate with the robot independently
 				of the libraries provided.</li>
 		</ul>
-		<h4>User interaction</h4>
+
+		<h4>Map of the parking-area</h4>
+		The customer provides a
+		<a href="https://github.com/anatali/issLab2021/blob/main/it.unibo.kotlinSupports/app/src/main/kotlin/mapRoomKotlin/mapUtil.kt">library</a>
+		in Kotlin to represent the map of the parking-area.
+
+		TODO: insert here map as grid with indications of all areas
+
+		<!-- <h4>User interaction</h4> Da finire con eventuali altre user story -->
+		<h4>Logical architecture</h4>
+		The image above represents the logical architecture of the system.
+		<br>
+		<img style="max-width: 100%" src="img/logical-architecture.png" alt="Logical architecture">
+		<br>
+		It is also available an executable model of the system written in <a href="model.qak">qak language</a>.
 	</div>
 
 	<h2>Test plans</h2>
 	<div class="remark">
+		<ul>
+			<li>client request a slot, and it's free: receive slotnum != 0 </li>
+			<li>client request a slot, but there's no space: receive slotnum == 0</li>
+			<li>client request a slot, but there's still a client before him: new client wait</li>
+			<li>client press CARENTER, check: unique tokenid, slot become occupied, ?the weightsensor weght car?</li>
+			<li>client pickup no error, check: slot become free, tokenid correspond, free outdoor area in tot time</li>
+			<li>client pickup, but the token does not correspond, error</li>
+			<li>client pickup, but there's still a client before him: new client wait</li>
+			<li>manager checkstatus, receive sensible value</li>
+			<li>? temperature over TMAX, check if robot stop</li>
+			<li>manager start and stop robot</li>
+			<li>manager start and stop fan</li>
+		</ul>
 
+		<table style="width:100%" border="1">
+			<tr>
+				<td>
+					<h3>testRequestSlot</h3>
+					The client request a slot and there is one slot free.
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The client receive 1 <= SLOTNUM <= 6</li>
+						<li>The selected slot become reserved???</li>
+					</ul>
+				</td>
+
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testRequestSlotNoSlotsFree</h3>
+					The client request a slot but there is not a free slot.
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The client receive SLOTNUM == 0</li>
+						<li></li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testRequestSlotIndoorOccupied</h3>
+					The client request a slot, but there is still a client in the INDOOR-area
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The system notifies the client to wait before entering</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testPressCarEnter</h3>
+					The client request a slot, but there is still a client in the INDOOR-area
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The client receive a unique tokenID</li>
+						<li>The selected parking slot become occupied</li>
+						<li>?? The system weight the car ??</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testClientPickup</h3>
+					The client request to pick up his car by submitting the tokenID, and then leave
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The tokenID is valid</li>
+						<li>The selected parking slot become free</li>
+						<li>The OUTDOOR-area must be freed within TMAX time</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testClientPickupOutdoorOccupied</h3>
+					The client request to pick up his car by submitting the tokenID, but the OUTDOOR-area is occupied
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The tokenID is valid</li>
+						<li>The system notifies the client to wait</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h3>testClientPickupWrongToken</h3>
+					The client request to pick up his car by submitting the tokenID, but the tokenID is not valid
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The client receives an error from the system</li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+	<h2>Work plan</h2>
+	<div class="remark">
+		We can assess the time needed to implement all the feature discussed above as follows:
+		<ol>
+			<li>Communication with devices (total 2 days)
+				<ol>
+					<li>Sonar: 3h</li>
+					<li>Fan: 1h</li>
+					<li>Thermometer: 2h</li>
+					<li>Weight sensor: 2h</li>
+					<li>Transport trolley: 1 day</li>
+				</ol></li>
+			<li>
+				ParkManagerService core: 2 days
+			</li>
+			<li>API endpoints for 2 GUI: 3h</li>
+			<li>ParkServiceGUI (total 10h)
+			<ol>
+				<li>Design (including chose of theme): 3h</li>
+				<li>Realization (only client side): 7h</li>
+			</ol>
+			</li>
+			<li>ParkServiceStatusGUI (total 7.5h)
+			<ol>
+				<li>Design (same theme of above): 1.5h</li>
+				<li>Realization (only client side): 6h</li>
+			</ol>
+			</li>
+		</ol>
+		One day of work is equal to 8 working hours.<br>
+		Total work estimate: 6 days and 4.5 hours.
 	</div>
 
 	<h2>Project</h2>
@@ -345,8 +575,9 @@
 </div>
 
 <div style="background-color:rgba(86, 56, 253, 0.9); width:60%;text-align:left;color:white">
-	By Alessandro Musarella email: alessandro.musarella@studio.unibo.it <br>
-	By Giulio Tripi email: giulio.tripi@studio.unibo.it
+	By Alessandro Musarella <a style="color: white" href="mailto:alessandro.musarella@studio.unibo.it">alessandro.musarella@studio.unibo.it</a><br>
+	By Giulio Tripi <a style="color: white" href="mailto:giulio.tripi@studio.unibo.it">giulio.tripi@studio.unibo.it</a><br>
+	GitHub: <a style="color: white" href="https://github.com/giuliotripi/ParkManagerService">https://github.com/giuliotripi/ParkManagerService</a>
 </div>
 </body>
 </html>
