Added site icon and title

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
+<head>
 <!--
 <link rel="stylesheet" type="text/css" href="../css/issStyle1.css">
 <script type="text/javascript" src="../css/issStyle.js"></script>
@@ -199,13 +200,13 @@
     }
 </style>
 
-<head>
-
-	<title>TemplateToFill</title></head>
+	<title>ParkManagerService</title>
+	<link rel="icon" href="img/favicon.png">
+</head>
 
 <body>
 <div id="top">
-	<h1>LABORATORIO DI INGEGNERIA DEI SISTEMI SOFTWARE <font size="5"></font></h1>
+	<h1>ESAME DI INGEGNERIA DEI SISTEMI SOFTWARE <font size="5"></font></h1>
 </div>
 
 <div class="body">
