Added first qak model

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -320,7 +320,7 @@
 		<br>
 		<img style="max-width: 100%" src="img/logical-architecture.png" alt="Logical architecture">
 		<br>
-		It is also available an executable model of the system written in <a href="">qak language</a>.
+		It is also available an executable model of the system written in <a href="model.qak">qak language</a>.
 	</div>
 
 	<h2>Test plans</h2>
