First list of requirements

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -331,16 +331,40 @@
 			<li>Only the transport trolley is provided by the customers, all the other devices must be chosen and provided by the
 				engineering company;</li>
 		</ul>
-		For the sake of completeness, a machine-readable <a href="model-requirements.qak">model</a> is also available.
 		<h3>List of requirements</h3>
 		<h4>Functional requirements</h4>
 		<ol class="custom functional">
-			<li id="F1"></li>
+			<li>The client can book a parking slot through ParkServiceGUI.</li>
+			<li>The system sends the client an id of the parking slot if there are slots available, otherwise it sends 0.</li>
+			<li>The client notifies the ParkManagerService when he leaves the car in front of the INDOOR.</li>
+			<li>The system can transport the cars from the INDOOR to the parking slots, and from the parking slots to the
+				OUTDOOR by sending command to a transport trolley.</li>
+			<li>The system should provide a unique identifier to the client (TOKENID), in order to retrieve the car later.</li>
+			<li>The system must understand if client's car is not in front of the INDOOR during F3</li>
+			<li>The system command the transport trolley to take the car and transport it to the booked parking slot</li>
+			<li></li>
+			<li>Allow one car to enter the parking area</li>
+			<li>The system </li>
+			<li>The parking manager can see the current state of the parking area through the ParkServiceStatusGUI</li>
+			<li>The parking manager can stop the transport trolley when TA > TMAX</li>
+			<li>The parking manager can start the transport trolley when it is stopped</li>
+			<li>The ParkManagerService should start the fan when TA > TMAX and stop it when TA <= TMAX</li>
+			<li>The ParkManagerService should notify the parking manager when the OUTDOOR area is not cleaned within the DTFREE
+			interval of time</li>
 		</ol>
 		<h4>Non-functional requirements</h4>
 		<ol class="custom nonfunctional">
 			<li id="NF1"></li>
 		</ol>
+		<script type="application/javascript">
+			let functionalList = document.querySelectorAll('ol.functional.custom > li');
+			for (let i = 0; i < functionalList.length; i++)
+				functionalList[i].id = 'F' + (i+1);
+			let nonfunctionalList = document.querySelectorAll('ol.nonfunctional.custom > li');
+			for (let i = 0; i < nonfunctionalList.length; i++)
+				nonfunctionalList[i].id = 'NF' + (i+1);
+		</script>
+		For the sake of completeness, a machine-readable <a href="model-requirements<.qak">model</a> is also available.
 	</div>
 
 	<h2>Problem analysis</h2>
