--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -369,20 +369,22 @@
 		separate node, the transport trolley will be modelled as an active entity, an actor, that wraps the basicrobot.
 		The following graphs show the interaction between the transport trolley and the ParkManagerService.
 
+		<img style="max-width: 100%" src="img/trolley-interaction.png" alt="trolley interaction">
 
 		<h4>Other devices</h4>
-		We have different devices in the parking area:
-		<ul>
-			<li></li>
-
-		</ul>
+		We have different devices in the parking area: weight-sensor, outsonar, thermometer, fan.
 
 		As they will all be on different nodes inside the parking area, we will also model these devices as actors.
 		Furthermore, the weight sensor, the outsonar and the thermometer must be also capable of sending events, so by
 		making them as active entities, we won't have the need to interact with polling. The following graphs show the
 		interaction between these devices and the ParkManagerService.
 
-		codice già fornito per il sonar, è un oggetto, incapsularlo in un attore
+		<img style="max-width: 100%" src="img/sensor-interaction.png" alt="sensor interaction">
+
+		<!-- codice già fornito per il sonar, è un oggetto, incapsularlo in un attore -->
+
+
+		<img style="max-width: 100%" src="img/logical-architecture2.png" alt="logical architecture">
 
 
 		<script type="application/javascript">
